# natural-lang

./: HEARTBEAT.md  README.md  STATE.md  cli.py  install.py  interpreter.py  package.json  parser.py  program.natural  pyproject.toml  runtime.py  trust.py
.github/workflows/: heartbeat.yml  test.yml
.heartbeat/: last-beat
.nlp-bridge/: gate
natural/: __init__.py  cli.py  interpreter.py
natural_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
